deployment/services/external-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: grafana-ingress
  namespace: fitm-cloud
  labels:
    app.kubernetes.io/name: fitm-cloud
    app.kubernetes.io/component: grafana
    app.kubernetes.io/managed-by: argocd
  annotations:
    argocd.argoproj.io/sync-wave: "3"
    argocd.argoproj.io/sync-options: SkipDryRunOnMissingResource=true,Prune=false
    nginx.ingress.kubernetes.io/rewrite-target: /
    nginx.ingress.kubernetes.io/ssl-redirect: "false"
spec:
  ingressClassName: nginx
  rules:
    - host: grafana.akikungz.uk
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: grafana-external
                port:
                  number: 3000
